spacing issues fixed in toyota page

--- a/assets/custom css/toyota-page.css
+++ b/assets/custom css/toyota-page.css
@@ -131,7 +131,7 @@ section {
 @media (max-width: 1400px) and (max-height: 800px) {
   .img-responsive {
     width: 400px;
-    max-width: 70%;
+    max-width: 60%;
   }
 }
 @media (max-width: 900px) {
